Modified code to create 2 copies of each image

--- a/image_augmentation/Augmentation.ipynb
+++ b/image_augmentation/Augmentation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "aff0ddeb-2b56-4a29-85eb-d97b5cdafc2b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator, img_to_array, load_img\n",
     "from tensorflow.keras.utils import save_img\n",
     "\n",
-    "def augment_images(source_dir, target_dir, augmentation_factor=5):\n",
+    "def augment_images(source_dir, target_dir, augmentation_factor=2):\n",
     "    # Define los rangos de cada clase\n",
     "    class_ranges = [(0, 236), (237, 437), (438, 710)]  # Los índices de inicio y fin para cada clase\n",
     "\n",
@@ -72,7 +72,7 @@
     "                    img_index += 1\n",
     "\n",
     "# Ejemplo de cómo llamar a la función\n",
-    "augment_images('image_dir', 'augmented_images', augmentation_factor=5)\n",
+    "augment_images('image_dir', 'augmented_images', augmentation_factor=2)\n",
     "\n",
     "\n"
    ]
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "49a20339-8c9b-43e7-9867-5cb38df86e51",
    "metadata": {},
    "outputs": [],
@@ -128,19 +128,19 @@
     "def create_image_label_file(output_path):\n",
     "    with open(output_path, 'w') as file:\n",
     "        # Escribe las asignaciones para la clase 0\n",
-    "        for i in range(1416):\n",
+    "        for i in range(708):\n",
     "            file.write(f\"{i}.jpg 0\\n\")\n",
     "        \n",
     "        # Escribe las asignaciones para la clase 1\n",
-    "        for i in range(1416, 3068):\n",
+    "        for i in range(708, 1344):\n",
     "            file.write(f\"{i}.jpg 1\\n\")\n",
     "        \n",
     "        # Escribe las asignaciones para la clase 2\n",
-    "        for i in range(3068, 4248):\n",
+    "        for i in range(1344, 2124):\n",
     "            file.write(f\"{i}.jpg 2\\n\")\n",
     "\n",
     "# Especifica la ruta y el nombre del archivo de salida\n",
-    "output_file_path = 'image_labels.txt'\n",
+    "output_file_path = 'val.txt'\n",
     "create_image_label_file(output_file_path)\n"
    ]
   },
